[workspace]
members=[ "weevy-server","weevy-swc-core"]
resolver="3"

[workspace.dependencies]
swc_atoms = "^5.0.0"
swc_common = "^11.0.0"
swc_ecma_ast = "^11.0.0"
swc_ecma_compat_es2015 = "^16.0.0"
swc_ecma_minifier = "^20.0.0"
swc_ecma_transforms_base = "^15.0.0"
swc_ecma_utils = "^15.0.0"
swc_ecma_visit = "^11.0.0"
swc_bundler = "^19.0.0"
swc_ecma_loader = "^11.0.0"
swc_ecma_parser = "^14.0.0"
swc_ecma_codegen = "^13"