[workspace]
members=[ "weevy-camo", "weevy-camo-wasm", "weevy-server", "weevy-supercharge-wasm","weevy-swc-core"]
resolver="3"

[workspace.dependencies]
swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"

portal-solutions-swibb="^0.2.3"