[package]
name = "weevy-server"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
description = "A powerful rewriter"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
reqwest = "0.12.15"
swc_atoms.workspace = true
swc_common = { workspace = true, features = ["tty-emitter"] }
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_visit.workspace = true
swc_ecma_codegen.workspace = true
tokio = "1.45.0"
weevy-swc-core = { version = "0.2.0", path = "../weevy-swc-core" }
sha3 = "0.10.8"
