[package]
name = "weevy-swc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base2048 = "2.0.2"
brotli = "7.0.0"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
