[package]
name = "weevy-swc-core"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"
description = "A powerful rewriter"

[dependencies]
base2048 = "2.0.2"
brotli = "7.0.0"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
